<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.fragments.CreateNewQuoteFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/create_image_author"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/author_placeholder"
            app:layout_constraintBottom_toBottomOf="@id/guide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.50" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_layout_edt_author_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/regular_margin"
            android:hint="@string/label_author_name"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintBottom_toTopOf="@id/guide">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_edt_author_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/regular_margin" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_layout_edt_quote"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/regular_margin"
            android:hint="@string/label_quote"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintBottom_toTopOf="@id/create_btn_create_quote"
            app:layout_constraintTop_toBottomOf="@id/create_image_author">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_edt_quote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:lines="5"
                android:maxLines="10"
                android:scrollbars="vertical" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_btn_create_quote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/regular_margin"
            android:background="@drawable/rounded_button"
            android:padding="@dimen/big_margin"
            android:text="@string/action_create_quote_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_start" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>